test_regress/t/t_tri_pullvec_bad.out
%Error: t/t_tri_pullvec_bad.v:10: Unsupported: Conflicting pull directions.
   pulldown p1 (w[1]);
            ^~
        t/t_tri_pullvec_bad.v:9: ... Location of conflicting pull.
   pullup p0 (w[0]);
          ^~
%Error: t/t_tri_pullvec_bad.v:11: Unsupported: Conflicting pull directions.
   pulldown p2 (w[2]);
            ^~
        t/t_tri_pullvec_bad.v:9: ... Location of conflicting pull.
   pullup p0 (w[0]);
          ^~
%Error: Exiting due to
